--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    if: ${{ github.actor != 'protegeproject-bot[bot]' }}
     steps:
       - uses: actions/create-github-app-token@v1
         id: app-token
@@ -24,7 +24,15 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
+          server-id: ossrh
+          server-username: OSSRH_USERNAME
+          server-password: OSSRH_TOKEN
           gpg-private-key: ${{secrets.GPG_PRIVATE_KEY}}
           gpg-passphrase: GPG_PASSPHRASE
       - name: Build with Maven
-        run: mvn --batch-mode verify -Prelease
+        run: mvn --batch-mode -Prelease verify
+
+env:
+  GPG_PASSPHRASE: ${{secrets.GPG_PASSPHRASE}}
+  OSSRH_USERNAME: ${{secrets.OSSRH_USERNAME}}
+  OSSRH_TOKEN: ${{secrets.OSSRH_TOKEN}}
